2013-01-29  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* gnu/testlet/java/lang/ArrayIndexOutOfBoundsException/classInfo/getConstructor.java:
	* gnu/testlet/java/lang/ArrayIndexOutOfBoundsException/classInfo/getConstructor.java:
	* gnu/testlet/java/lang/ArrayIndexOutOfBoundsException/classInfo/getConstructors.java:
	* gnu/testlet/java/lang/ArrayIndexOutOfBoundsException/classInfo/getDeclaredConstructors.java:
	* gnu/testlet/java/lang/ArrayIndexOutOfBoundsException/classInfo/getDeclaredFields.java:
	* gnu/testlet/java/lang/ArrayIndexOutOfBoundsException/classInfo/getDeclaredMethods.java:
	* gnu/testlet/java/lang/ArrayIndexOutOfBoundsException/classInfo/getFields.java:
	* gnu/testlet/java/lang/ArrayIndexOutOfBoundsException/classInfo/getMethods.java:
	* gnu/testlet/java/lang/ArrayIndexOutOfBoundsException/classInfo/isAssignableFrom.java:
	* gnu/testlet/java/lang/ArrayIndexOutOfBoundsException/classInfo/isEnum.java:
	Added new test getConstructor and updated recent ones.

2013-01-28  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* gnu/testlet/java/lang/ArrayIndexOutOfBoundsException/classInfo/InstanceOf.java:
	* gnu/testlet/java/lang/ArrayIndexOutOfBoundsException/classInfo/isInstance.java:
	* gnu/testlet/java/lang/ArrayIndexOutOfBoundsException/classInfo/isInterface.java:
	* gnu/testlet/java/lang/ArrayIndexOutOfBoundsException/classInfo/isLocalClass.java:
	* gnu/testlet/java/lang/ArrayIndexOutOfBoundsException/classInfo/isMemberClass.java:
	* gnu/testlet/java/lang/ArrayIndexOutOfBoundsException/classInfo/isPrimitive.java:
	* gnu/testlet/java/lang/ArrayIndexOutOfBoundsException/classInfo/isSynthetic.java:
	Updated, added JDK tag.
	* gnu/testlet/java/lang/ArrayIndexOutOfBoundsException/classInfo/getClasses.java:
	* gnu/testlet/java/lang/ArrayIndexOutOfBoundsException/classInfo/getComponentType.java:
	Two new tests added for ArrayIndexOutOfBoundsException class.

2013-01-25  Pavel Tisnovsky  <ptisnovs@redhat.com>
