@@ -1,3 +1,10 @@
+2013-01-30  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* gnu/testlet/java/lang/ArrayIndexOutOfBoundsException/classInfo/getDeclaredAnnotations.java:
+	* gnu/testlet/java/lang/ArrayIndexOutOfBoundsException/classInfo/getDeclaredClasses.java:
+	* gnu/testlet/java/lang/ArrayIndexOutOfBoundsException/classInfo/getDeclaredConstructor.java:
+	Three new tests added for a class ArrayIndexOutOfBoundsException.
+
 2013-01-29  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* gnu/testlet/java/lang/ArrayIndexOutOfBoundsException/classInfo/getConstructor.java:
